--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "firebase": "^9.17.1",
+    "lodash.debounce": "^4.0.8",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
